--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ header ul li
 }
 header ul li a{
     display: inline-block;
-    color: blue;
+    color: rgb(0, 255, 238);
     font-weight: 400;
     margin-left: 40px;
     text-decoration: none;
@@ -60,14 +60,14 @@ header ul li a{
 .content .textBox
 {
     position: relative;
-    max-width: 600px;
+    max-width: 300px;
 }
 .content .textBox h2
 {
     color: rgb(0, 145, 255);
     font-size: 4em;
     line-height: 1.4em;
-    font-weight: 500;
+    font-weight: 300;
 }
 .content .textBox h2 span
 {
@@ -135,7 +135,7 @@ header ul li a{
     width: 100%;
     height: 100%;
     background: #007bff;
-    clip-path: circle(600px at right 800px);
+    clip-path: circle(600px at right 500px);
 }
 
 .container {
