--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ header
 header .logo
 {
     position: relative;
-    max-width: 80px; 
+    max-width: 100px; 
 }
 header ul
 {
@@ -44,9 +44,9 @@ header ul li
 }
 header ul li a{
     display: inline-block;
-    color: rgb(0, 255, 238);
-    font-weight: 400;
-    margin-left: 40px;
+    color: rgb(0, 166, 255);
+    font-weight: 80;
+    margin-left: 20px;
     text-decoration: none;
 }
 .content
@@ -60,20 +60,20 @@ header ul li a{
 .content .textBox
 {
     position: relative;
-    max-width: 300px;
+    max-width: 600px;
 }
 .content .textBox h2
 {
-    color: rgb(0, 145, 255);
-    font-size: 4em;
+    color: rgb(60, 0, 255);
+    font-size: 2.5em;
     line-height: 1.4em;
-    font-weight: 300;
+    font-weight: 50;
 }
 .content .textBox h2 span
 {
     color: rgb(0, 64, 255);
     font-size: 1.2em;
-    font-weight: 900;
+    font-weight: 500;
 }
 .content .textBox p
 {
@@ -87,7 +87,7 @@ header ul li a{
     background: #0000ff;
     color: #fff;
     border-radius: 40px;
-    font-weight: 500;
+    font-weight: 300;
     letter-spacing: 1px;
     text-decoration: none;
 }
@@ -134,8 +134,8 @@ header ul li a{
     left: 0;
     width: 100%;
     height: 100%;
-    background: #007bff;
-    clip-path: circle(600px at right 500px);
+    background: #2b00ff;
+    clip-path: circle(600px at right 800px);
 }
 
 .container {
