--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ header ul li
 }
 header ul li a{
     display: inline-block;
-    color: rgb(0, 166, 255);
+    color: rgb(0, 81, 255);
     font-weight: 80;
     margin-left: 20px;
     text-decoration: none;
@@ -64,27 +64,27 @@ header ul li a{
 }
 .content .textBox h2
 {
-    color: rgb(60, 0, 255);
+    color: rgb(34, 0, 255);
     font-size: 2.5em;
     line-height: 1.4em;
     font-weight: 50;
 }
 .content .textBox h2 span
 {
-    color: rgb(0, 64, 255);
+    color: rgb(0, 0, 255);
     font-size: 1.2em;
     font-weight: 500;
 }
 .content .textBox p
 {
-    color: white;
+    color: rgb(237, 100, 198);
 }
 .content .textBox a
 {
     display: inline-block;
     margin-top: 20px;
     padding: 8px 20px;
-    background: #0000ff;
+    background: #0062ff;
     color: #fff;
     border-radius: 40px;
     font-weight: 300;
@@ -134,7 +134,7 @@ header ul li a{
     left: 0;
     width: 100%;
     height: 100%;
-    background: #2b00ff;
+    background: #00a6ff;
     clip-path: circle(600px at right 800px);
 }
 
