--- a/style.css
+++ b/style.css
@@ -10,12 +10,12 @@ section
 {
     position: relative;
     width: 100%;
-    min-height: 800px;
+    min-height: 1000px;
     padding: 100px;
     display: flex;
-    justify-content: center;
+    justify-content: right;
     align-items: center;
-    background-color: rgb(247, 247, 240);
+    background-color: white);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -26,7 +26,7 @@ header
     top: 0;
     left: 0;
     width: 100%;
-    padding: 20px 100px;
+    padding: 20px 80px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -34,11 +34,10 @@ header
 }
 header .logo
 {
-    height: 100px;
-    height: 100px;
-    border-radius: 100%;
+    height: 80px;
+    border-radius: 50%;
     position: absolute;
-    max-width: 600px; 
+    max-width: 300px; 
     border: 1px solid rgb(0, 255, 179);
 }
 
@@ -55,13 +54,13 @@ header ul li a{
     display: inline-flex;
     color: rgb(27, 35, 28);
     font-size: 20pt;
-    font-weight: 1000px;
-    margin-left: 100px;
+    font-weight: 600px;
+    margin-left: 20px;
     text-decoration: none;
 }
 .content
 {
-    font-weight: 1000px;
+    font-weight: 600px;
     font-size: 15pt;
     margin-left: 100px;
     position: absolute;
@@ -73,25 +72,27 @@ header ul li a{
 .content .textBox
 {
     position: relative;
-    max-width: 600px;
+    max-width: 300px;
 }
 .content .textBox h2
 {
+    margin-left: 200px;
     color: rgb(34, 35, 32);
     font-size: 2.5em;
-    line-height: 1em;
-    font-weight: 50;
+    line-height: 1.5em;
+    font-weight: 20;
 }
 .content .textBox h2 span
 {
     color: rgb(23, 98, 15);
     font-size: 3.5em;
-    font-weight: 100;
+    font-weight: 1000;
 }
 .content .textBox a
 {
+    margin-left: 100px;
     display: inline-block;
-    margin-top: 300px;
+    margin-top: 420px;
     padding: 8px 20px;
     background: #0062ff;
     color: #fff;
@@ -106,7 +107,7 @@ header ul li a{
     display: flex;
     justify-content: flex-end;
     padding-right: 100px;
-    margin-top: 200px;
+    margin-top: 100px;
     
 }
 .content .imgBox img
@@ -136,7 +137,7 @@ header ul li a{
 }
 .thumb li img
 {
-    max-width: 50px;
+    max-width: 70px;
 }
 .circle
 {
