--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ header
 header .logo
 {
     line-height: 1.6em;
-    height: 40px;
+    height: 150px;
     border-radius: 50%;
     position: absolute;
     max-width: 300px; 
@@ -56,7 +56,7 @@ header ul li a{
     color: rgb(27, 35, 28);
     font-size: 20pt;
     font-weight: 500px;
-    margin-left: 100px;
+    margin-left: 200px;
     text-decoration: none;
 }
 .content
@@ -78,11 +78,13 @@ header ul li a{
 }
 .content .textBox h2
 {
-    margin-left: 250px;
+    margin-left: 200px;
     color: rgb(34, 35, 32);
-    font-size: 2.5em;
-    line-height: 1.1em;
-    font-weight: 20;
+    font-size: 2.9em;
+    line-height: 1.5em;
+    font-weight: 100px;
+    height: 120px;
+    left: 25%;
 }
 .content .textBox h2 span
 {
@@ -114,7 +116,7 @@ header ul li a{
 }
 .content .imgBox img
 {   
-    max-width: 200px;
+    max-width: 250px;
     
 }
 .thumb
