--- a/style.css
+++ b/style.css
@@ -19,7 +19,8 @@ section
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
-    border: 10px solid rgb(79, 79, 79);
+    border: 6px solid rgb(79, 79, 79);
+    border-radius: 0.8%;
 }
 header
 {
