--- a/style.css
+++ b/style.css
@@ -230,3 +230,14 @@ header ul li a{
     color: black;
     background-color: white;
 }
+
+.rodape {
+    margin-left: 10px;
+    color: rgb(34, 35, 32);
+}
+
+.assinatura
+{
+    margin-left: 235px;
+    color: rgb(34, 35, 32);
+}
