--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ section
     display: flex;
     justify-content: right;
     align-items: center;
-    background-color: aliceblue);
+    background-color: aliceblue;
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -118,10 +118,10 @@ header ul li a{
 
 .content .imgBox img
 {   
-
     max-width: 150px;
-    
+    max-height: 600px;
 }
+
 .thumb
 {
     position: absolute;
@@ -146,6 +146,7 @@ header ul li a{
 {
     max-width: 100px;
 }
+
 .circle
 {
     position: absolute;
@@ -154,8 +155,7 @@ header ul li a{
     width: 100%;
     height: 100%;
     background: #00a6ff;
-    clip-path: circle(600px at right 800px);
-    
+    clip-path: circle(600px at right 800px)
 }
 
 .container {
@@ -232,8 +232,17 @@ header ul li a{
     background-color: white;
 }
 
+.patrocinios
+{
+    background-color: aliceblue);
+    margin-left: 150px;
+    margin-right: 150px;
+    background-size: cover;
+    background-position: center;
+}
+
 .rodape {
-    text-align: left;
+    justify-content: center;
     margin-left: 400px;
     color: rgb(34, 35, 32);
 }
