--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 section
 {
     position: relative;
-    width: 100%;
+    max-width: 100%;
     min-height: 1000px;
     padding: 100px;
     display: flex;
