--- a/style.css
+++ b/style.css
@@ -235,10 +235,10 @@ header ul li a{
     background-position: 100%;
     background-image: url(../aguapremiun/imagens/blue.jpg);
     background-color: beige;
-    width: 400px;
+    width: 350px;
     padding: 10px;
     margin: auto;
-    border: 3px solid black;
+    border: 5px solid gray;
     border-radius: 15px;
     text-align: center;
 }
