--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ header ul li a{
 }
 .content .textBox h2
 {
-    margin-left: 220px;
+    margin-left: 300px;
     color: rgb(34, 35, 32);
     font-size: 2.9em;
     line-height: 1.5em;
@@ -236,11 +236,12 @@ header ul li a{
     background-image: url(../aguapremiun/imagens/blue.jpg);
     background-color: beige;
     width: 350px;
-    padding: 10px;
+    padding: 1px;
     margin: auto;
     border: 5px solid gray;
     border-radius: 15px;
     text-align: center;
+    height: 50%;
 }
 
 .assinatura
