--- a/style.css
+++ b/style.css
@@ -118,8 +118,8 @@ header ul li a{
 
 .content .imgBox img
 {   
-    max-width: 150px;
-    max-height: 600px;
+    max-width: 180px;
+    max-height: 100%;
 }
 
 .thumb
