--- a/style.css
+++ b/style.css
@@ -8,8 +8,9 @@
 }
 section
 {
+    height: 100vh;
     position: relative;
-    max-width: 2000px;
+    max-width: 100%;
     min-height: 1000px;
     padding: 100px;
     display: flex;
@@ -120,6 +121,7 @@ header ul li a{
 {   
     max-width: 180px;
     max-height: 100%;
+    background-size: cover;
 }
 
 .thumb
@@ -232,8 +234,11 @@ header ul li a{
     background-color: white;
 }
 .rodape {
-    background-position: 100%;
+    font-size: larger;
+    background-position: center center;
     background-image: url(../aguapremiun/imagens/blue.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
     background-color: beige;
     width: 350px;
     padding: 1px;
@@ -241,7 +246,7 @@ header ul li a{
     border: 5px solid gray;
     border-radius: 15px;
     text-align: center;
-    height: 50%;
+    height: 115vh;
 }
 
 .assinatura
