--- a/style.css
+++ b/style.css
@@ -161,7 +161,7 @@ header ul li a{
     width: 100%;
     height: 100%;
     background: #00a6ff;
-    clip-path: circle(700px at right 800px)
+    clip-path: circle(60% at right 120%)
 }
 
 main.assinatura
