--- a/style.css
+++ b/style.css
@@ -197,7 +197,7 @@ main.assinatura
     
     header ul
     {
-        position: center;
+        position: none;
     }
     header ul li
     {
@@ -208,7 +208,7 @@ main.assinatura
         color: #333;
         font-size: 15pt;
         font-weight: 20;
-        margin-left: 10px;
+        margin-left: 100%;
         text-decoration: none;
     }
     .content
@@ -252,6 +252,8 @@ main.assinatura
     {
         color: #333;
         text-align: left;
+        padding: -20px;
+        top: 50%;
     }
     .content .textBox a 
     {
@@ -274,13 +276,15 @@ main.assinatura
         justify-content: flex-end;
         padding-right: 100px;
         height: 100%;
+        align-items: 100%;
+        margin-left: 100%;
     }
     
     .content .imgBox img
     {   
-        max-width: 500px;
+        max-width: 400px;
         align-items: 100%;
-        height: 200px;
+        height: 260px;
         position: absolute;
         padding: 20px 0px;
     }
@@ -288,7 +292,7 @@ main.assinatura
     {
         position: center;
         align-items: center;
-        bottom: 120px;
+        bottom: 80px;
         transform: translateX(-50%);
         display: flex;
     }
@@ -306,13 +310,16 @@ main.assinatura
     }
     .thumb li img
     {
-        max-width: 100%;
+        width: 150%;
+        height: 120%;
+        right: 120%;
+        padding-bottom: 1px;
     }
     .sci
     {
         position: absolute;
-        top: 50%;
-        right: 30px;
+        top: 92%;
+        right: 20px;
         transform: translateY(-50%);
         display: flex;
         align-items: center;
@@ -325,7 +332,7 @@ main.assinatura
     .sci li a
     {
         display: inline-block;
-        margin: 5px 0;
+        margin: 1px 0;
         transform: scale(0.6);
         filter: invert(1);
     }
@@ -337,7 +344,7 @@ main.assinatura
         width: 100%;
         height: 100%;
         background: #00a6ff;
-        clip-path: circle(800px at right 800px)
+        clip-path: circle(700px at right 800px)
     }
     
     main.assinatura
