--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ section
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background: #fff;
+    background-image: linear-gradient(to right, white, beige);
 }
 header
 {
@@ -174,9 +174,11 @@ main.assinatura
 @media (max-width:785px) {
     section
     {
+        width: 100%;
         position: relative;
         max-width: 100%;
         padding: 18px 20px;
+        background-image: linear-gradient(to right white, beige);
     }
     header
     {
